--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+body {
+  font-family: sans-serif;
+}
+
+.textLeft {
+  text-align: left;
+}
+
+.textCenter {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table {
+  padding: 5px;
+  border: 1px solid black;
+  margin: 20px 5px;
+  width: 70vw;
+  border-collapse: collapse;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.semesterHeading {
+  padding: 5px;
+  background-color: cyan;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.courses {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  max-width: 70vw;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+tr {
+  border: 2px solid blue;
+  padding: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+th,
+td {
+  border: 1px solid black;
+  padding: 4px;
 }
